syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "acs1.proto";

option csharp_namespace = "AElf.Contracts.TestContract.BasicUpdate";

service BasicUpdateContract {
    option (aelf.csharp_state) = "AElf.Contracts.TestContract.BasicUpdate.BasicUpdateContractState";
    option (aelf.base) = "acs1.proto";
    
    //Actions
    rpc InitialBasicUpdateContract(InitialBasicContractInput) returns (google.protobuf.Empty){
    }
    rpc UpdateBetLimit(BetLimitInput) returns (google.protobuf.Empty){
    }
    rpc UserPlayBet(BetInput) returns (google.protobuf.Empty) {
    }
    rpc UpdateMortgage(BetInput) returns (google.protobuf.Empty) {
    }
    rpc UpdateStopBet(google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    //GetHashCode test
    rpc GetHashCodeStringValue(google.protobuf.StringValue) returns (google.protobuf.Int32Value) {
    }
    rpc GetHashCodeInt32Value(google.protobuf.Int32Value) returns (google.protobuf.Int32Value) {
    }
    rpc GetHashCodeInt64Value(google.protobuf.Int64Value) returns (google.protobuf.Int32Value) {
    }
    rpc GetHashCodeBytesValue(google.protobuf.BytesValue) returns (google.protobuf.Int32Value) {
    }
    rpc GetHashCodeEnumValue(EnumInput) returns (google.protobuf.Int32Value) {
    }
    rpc GetHashCodeComplexValue(ComplexInput) returns (google.protobuf.Int32Value) {
    }

    //View
    rpc GetContractName(google.protobuf.Empty) returns (google.protobuf.StringValue){
        option (aelf.is_view) = true;
    }
    rpc QueryWinMoney(google.protobuf.Empty) returns (MoneyOutput) {
        option (aelf.is_view) = true;
    }
    rpc QueryRewardMoney(google.protobuf.Empty) returns (MoneyOutput) {
        option (aelf.is_view) = true;
    }
    rpc QueryUserWinMoney(aelf.Address) returns (MoneyOutput) {
        option (aelf.is_view) = true;
    }
    rpc QueryUserLoseMoney(aelf.Address) returns (MoneyOutput) {
        option (aelf.is_view) = true;
    }
    rpc QueryBetStatus(google.protobuf.Empty) returns (BetStatus){
        option (aelf.is_view) = true;
    }
}

//Input
message InitialBasicContractInput {
    string contract_name = 1;
    int64 min_value = 2;
    int64 max_value = 3;
    int64 mortgage_value = 4;
    aelf.Address manager = 5;
}

message BetLimitInput {
    int64 min_value = 1;
    int64 max_value = 2;
}

message BetInput {
    int64 int64_value = 1;
}
//Output

message MoneyOutput {
    int64 int64_value = 1;
}

message BetStatus {
    bool bool_value = 1;
}

//CodeHash test input
message EnumInput {
     Color info = 1;
}

message ComplexInput {
    string string_value = 1;
    int32 int_value = 2;
    int64 long_value = 3;
    Color enum_value = 4;
}

enum Color {
    BLACK = 0;
    WHITE = 1;
    BLUE = 2;
}